crates/tests/libs/bindgen/data/error/wrong_arg_type/input.rdl

#[winrt]
mod Test {
    attribute FooAttribute { fn(value: u32); }

    #[Foo("not a u32")]
    class MyClass {}
}
        